# pedalboard-pluginary

./: .coveragerc  .cursorrules  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  PLAN.md  README.md  TODO.md  WORK.md  build.sh  llms.txt  publish.sh  pyproject.toml  setup.cfg  setup.py  test_isolated_debug.py  tox.ini
.cursor/rules/: data-flow.mdc  unicode-algorithms.mdc  unicode-wrapper-models.mdc
.giga/: specifications.json
.github/workflows/: ci.yml  release.yml
docs/: Gemfile  _config.yml  architecture.md  cli.md  index.md
issues/: 101.txt  102.txt  103.txt  104.txt  201.txt  202.txt
scripts/: format.sh  release.sh  test.sh
src/pedalboard-stubs/: __init__.pyi
src/pedalboard_pluginary/: __init__.py  __main__.py  async_scanner.py  base_scanner.py  constants.py  core.py  data.py  exceptions.py  models.py  progress.py  protocols.py  retry.py  scan_single.py  scanner.py  scanner_clean.py  scanner_isolated.py  scanner_parallel.py  scanner_worker.py  serialization.py  skeleton.py  timeout.py  types.py  utils.py
src/pedalboard_pluginary/cache/: __init__.py  json_backend.py  migration.py  sqlite_backend.py
src/pedalboard_pluginary/resources/: default_ignores.json
src/pedalboard_pluginary/scanners/: __init__.py  au_scanner.py  vst3_scanner.py
tests/: conftest.py  test_cli.py  test_core.py  test_data.py  test_exceptions.py  test_failsafe_integration.py  test_journal.py  test_models.py  test_scanner_discovery.py  test_serialization.py  test_skeleton.py  test_sqlite_performance.py  test_utils.py
tests/scanners/: __init__.py  test_au_scanner.py  test_vst3_scanner.py
