[metadata]
name = pedalboard_pluginary
description = VST & AU plugin management for Spotify Pedalboard
author = Adam Twardoch
author_email = adam+github@twardoch.com
license = Apache-2.0
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/twardoch/pedalboard-pluginary
project_urls =
    Documentation = https://github.com/twardoch/pedalboard-pluginary#readme
    Source = https://github.com/twardoch/pedalboard-pluginary
    Tracker = https://github.com/twardoch/pedalboard-pluginary/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Multimedia :: Sound/Audio
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
python_requires = >=3.9
install_requires =
    pedalboard>=0.8.6
    fire>=0.5.0
    tqdm>=4.66.1

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    pbpluginary = pedalboard_pluginary.__main__:cli

[options.package_data]
pedalboard_pluginary = resources/*.json

[tool:pytest]
addopts =
    --cov pedalboard_pluginary --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py


[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.5
package = pedalboard_pluginary
extensions =
    github_actions
    markdown
    pre_commit
